<resources>
    <string name="app_name">AliveLife</string>
    <string name="delete_account">Delete Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="log_out">LOG OUT</string>
    <string name="protectees">Protectees</string>
    <string name="nombre">Nombre</string>
    <string name="matricula">MAtricula</string>
    <string name="grupo">Grupo</string>
    <string name="anio">Año</string>
    <string name="add_protectee">Add Protectee</string>
    <string name="back">back_arrow</string>
    <string name="add_protector">Add protector</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="protectors">Protectors</string>
</resources>